--- a/nn/YOLO_VGG16/degug_notebooks/code_to_jupyter_server.ipynb
+++ b/nn/YOLO_VGG16/degug_notebooks/code_to_jupyter_server.ipynb
@@ -9,29 +9,52 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/dcor/niskhizov/Rar\n"
+      "/home/dcor/niskhizov/Rar/object-detection-nn\n"
      ]
     }
    ],
    "source": [
-    "cd Rar"
+    "cd object-detection-nn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "git: Command not found.\n"
+      "remote: Enumerating objects: 46, done.\u001b[K\n",
+      "remote: Counting objects: 100% (46/46), done.\u001b[K\n",
+      "remote: Compressing objects: 100% (18/18), done.\u001b[K\n",
+      "remote: Total 35 (delta 20), reused 32 (delta 17), pack-reused 0 (from 0)\u001b[K\n",
+      "Unpacking objects: 100% (35/35), 15.60 KiB | 36.00 KiB/s, done.\n",
+      "From https://github.com/OfirShechter/object-detection-nn\n",
+      "   ba2de2c..d28039b  part_2     -> origin/part_2\n",
+      "Updating ba2de2c..d28039b\n",
+      "Fast-forward\n",
+      " .gitignore                                                 |   3 \u001b[32m+\u001b[m\u001b[31m-\u001b[m\n",
+      " nn/YOLO_VGG16/degug_notebooks/code_to_jupyter_server.ipynb | 475 \u001b[32m+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++\u001b[m\u001b[31m-\u001b[m\n",
+      " nn/YOLO_VGG16/degug_notebooks/investigate_vgg16.py         |  18 \u001b[32m++++\u001b[m\n",
+      " nn/YOLO_VGG16/degug_notebooks/run_model_test_shapes.py     |   9 \u001b[32m+\u001b[m\u001b[31m-\u001b[m\n",
+      " nn/YOLO_VGG16/degug_notebooks/test_YOLO_VGG16.py           |  97 \u001b[32m+++++++++++++++++++++\u001b[m\n",
+      " nn/YOLO_VGG16/degug_notebooks/train.py                     |  13 \u001b[32m+\u001b[m\u001b[31m--\u001b[m\n",
+      " nn/YOLO_VGG16/degug_notebooks/train_YOLO_VGG16.py          | 178 \u001b[32m++++++++++++++++++++++++++++++++++++++\u001b[m\n",
+      " nn/YOLO_VGG16/model/YOLO_VGG16.py                          | 134 \u001b[32m+++++++++++++++\u001b[m\u001b[31m-------------\u001b[m\n",
+      " nn/YOLO_VGG16/model/YOLO_VGG16_old.py                      |  75 \u001b[32m++++++++++++++++\u001b[m\n",
+      " nn/YOLO_VGG16/model/YOLO_v3.py                             |  12 \u001b[32m++\u001b[m\u001b[31m-\u001b[m\n",
+      " 10 files changed, 941 insertions(+), 73 deletions(-)\n",
+      " create mode 100644 nn/YOLO_VGG16/degug_notebooks/investigate_vgg16.py\n",
+      " create mode 100644 nn/YOLO_VGG16/degug_notebooks/test_YOLO_VGG16.py\n",
+      " create mode 100644 nn/YOLO_VGG16/degug_notebooks/train_YOLO_VGG16.py\n",
+      " create mode 100644 nn/YOLO_VGG16/model/YOLO_VGG16_old.py\n"
      ]
     }
    ],
    "source": [
-    "git pull"
+    "!git pull"
    ]
   },
   {
@@ -534,19 +557,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/dcor/niskhizov/Rar/object-detection-nn\n"
+      "Collecting tensorboard\n",
+      "  Downloading tensorboard-2.19.0-py3-none-any.whl.metadata (1.8 kB)\n",
+      "Collecting absl-py>=0.4 (from tensorboard)\n",
+      "  Downloading absl_py-2.1.0-py3-none-any.whl.metadata (2.3 kB)\n",
+      "Collecting grpcio>=1.48.2 (from tensorboard)\n",
+      "  Downloading grpcio-1.70.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (3.9 kB)\n",
+      "Collecting markdown>=2.6.8 (from tensorboard)\n",
+      "  Downloading Markdown-3.7-py3-none-any.whl.metadata (7.0 kB)\n",
+      "Requirement already satisfied: numpy>=1.12.0 in /home/dcor/niskhizov/anaconda3/envs/obj_d/lib/python3.11/site-packages (from tensorboard) (2.1.2)\n",
+      "Requirement already satisfied: packaging in /home/dcor/niskhizov/anaconda3/envs/obj_d/lib/python3.11/site-packages (from tensorboard) (24.2)\n",
+      "Collecting protobuf!=4.24.0,>=3.19.6 (from tensorboard)\n",
+      "  Downloading protobuf-5.29.3-cp38-abi3-manylinux2014_x86_64.whl.metadata (592 bytes)\n",
+      "Requirement already satisfied: setuptools>=41.0.0 in /home/dcor/niskhizov/anaconda3/envs/obj_d/lib/python3.11/site-packages (from tensorboard) (75.8.0)\n",
+      "Requirement already satisfied: six>1.9 in /home/dcor/niskhizov/anaconda3/envs/obj_d/lib/python3.11/site-packages (from tensorboard) (1.17.0)\n",
+      "Collecting tensorboard-data-server<0.8.0,>=0.7.0 (from tensorboard)\n",
+      "  Downloading tensorboard_data_server-0.7.2-py3-none-manylinux_2_31_x86_64.whl.metadata (1.1 kB)\n",
+      "Collecting werkzeug>=1.0.1 (from tensorboard)\n",
+      "  Downloading werkzeug-3.1.3-py3-none-any.whl.metadata (3.7 kB)\n",
+      "Requirement already satisfied: MarkupSafe>=2.1.1 in /home/dcor/niskhizov/anaconda3/envs/obj_d/lib/python3.11/site-packages (from werkzeug>=1.0.1->tensorboard) (2.1.5)\n",
+      "Downloading tensorboard-2.19.0-py3-none-any.whl (5.5 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.5/5.5 MB\u001b[0m \u001b[31m1.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m0m\n",
+      "\u001b[?25hDownloading absl_py-2.1.0-py3-none-any.whl (133 kB)\n",
+      "Downloading grpcio-1.70.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (5.9 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.9/5.9 MB\u001b[0m \u001b[31m2.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading Markdown-3.7-py3-none-any.whl (106 kB)\n",
+      "Downloading protobuf-5.29.3-cp38-abi3-manylinux2014_x86_64.whl (319 kB)\n",
+      "Downloading tensorboard_data_server-0.7.2-py3-none-manylinux_2_31_x86_64.whl (6.6 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.6/6.6 MB\u001b[0m \u001b[31m4.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading werkzeug-3.1.3-py3-none-any.whl (224 kB)\n",
+      "Installing collected packages: werkzeug, tensorboard-data-server, protobuf, markdown, grpcio, absl-py, tensorboard\n",
+      "Successfully installed absl-py-2.1.0 grpcio-1.70.0 markdown-3.7 protobuf-5.29.3 tensorboard-2.19.0 tensorboard-data-server-0.7.2 werkzeug-3.1.3\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "cd object-detection-nn"
+    "pip install tensorboard"
    ]
   },
   {
@@ -688,9 +742,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "object-detection",
+   "display_name": "obj_d",
    "language": "python",
-   "name": "python3"
+   "name": "obj_d"
   },
   "language_info": {
    "codemirror_mode": {
@@ -702,7 +756,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
