--- a/nn/YOLO_VGG16_OBB/notebooks/train_YOLO_VGG16_OBB.ipynb
+++ b/nn/YOLO_VGG16_OBB/notebooks/train_YOLO_VGG16_OBB.ipynb
@@ -95,10 +95,10 @@
     "scaler = torch.amp.GradScaler(device=device) \n",
     "# Loading the checkpoint \n",
     "if load_model: \n",
-    "    load_checkpoint(model_path_base + f\"e2700_vgg16_{checkpoint_file}\", model, optimizer, leanring_rate, device) \n",
+    "    load_checkpoint(model_path_base + f\"e3400_vgg16_{checkpoint_file}\", model, optimizer, leanring_rate, device) \n",
     "\n",
     "# Initialize TensorBoard writer\n",
-    "writer = SummaryWriter(log_dir='runs/YOLO_VGG16_OBB_v2')\n",
+    "writer = SummaryWriter(log_dir='runs/YOLO_VGG16_OBB_complete_v1')\n",
     "\n"
    ]
   },
@@ -118,9 +118,9 @@
     "# Defining the train data loader \n",
     "train_loader = torch.utils.data.DataLoader( \n",
     "\tdataset=dataset, \n",
-    "\tbatch_size=2, \n",
+    "\tbatch_size=16, \n",
     "\tshuffle=True, \n",
-    "\tnum_workers=2,\n",
+    "\tnum_workers=4,\n",
     " \tprefetch_factor=10,\n",
     ") \n"
    ]
@@ -136,14 +136,15 @@
     "    grid_sizes=[13, 26, 52],\n",
     "    anchors=ANCHORS,\n",
     "    transform=test_transform,  # Use the same transform for validation\n",
-    "    data_base_path = f\"nn/dotadataset/train\"\n",
+    "    data_base_path = f\"nn/dotadataset/val\"\n",
     ")\n",
     "\n",
     "# Create the validation data loader\n",
     "val_loader = torch.utils.data.DataLoader(\n",
     "    dataset=val_dataset,\n",
-    "    batch_size=2,\n",
+    "    batch_size=16,\n",
     "    shuffle=True,\n",
+    "    num_workers=4,\n",
     ")\n",
     "\n",
     "val_loader_iter = iter(val_loader)"
@@ -200,7 +201,7 @@
     "error_counter = 0\n",
     "save_model = True\n",
     "# Training the model \n",
-    "for e in range(3142, epochs+1): \n",
+    "for e in range(0, epochs+1): \n",
     "\tprint(\"Epoch:\", e) \n",
     "    ################# dos\n",
     "    # Creating a progress bar \n",
@@ -262,70 +263,70 @@
     "\t\t\t\t# \t\t\tif os.path.exists(model_path_base + f\"b{i}_vgg16_checkpoint.pth.tar\"):\n",
     "\t\t\t\t# \t\t\t\tos.remove(model_path_base + f\"b{i}_vgg16_checkpoint.pth.tar\")\n",
     "\n",
-    "\t\tif e % 100 == 0:\n",
-    "\t\t\t# Saving the model \n",
-    "\t\t\tif save_model: \n",
-    "\t\t\t\tsave_checkpoint(model, optimizer, filename=model_path_base +f\"e{e}_vgg16_checkpoint.pth.tar\")\n",
-    "\t\t\t\t# delete batch checkpoints\n",
-    "\t\t\t\tfor i in range(0, batch_idx+1, 200):\n",
-    "\t\t\t\t\tif os.path.exists(model_path_base + f\"b{i}_vgg16_checkpoint.pth.tar\"):\n",
-    "\t\t\t\t\t\tos.remove(model_path_base + f\"b{i}_vgg16_checkpoint.pth.tar\")\n",
-    "\t\t\t\t# for i in range(0,e-3):\n",
-    "\t\t\t\t# \tif os.path.exists(model_path_base + f\"e{i}_vgg16_checkpoint.pth.tar\"):\n",
-    "\t\t\t\t# \t\tos.remove(model_path_base + f\"e{i}_vgg16_checkpoint.pth.tar\")\n",
-    "\t\t\n",
-    "\t\t\tmodel.eval()\n",
-    "\t\t\n",
-    "\t\t\t# Getting a sample image from the test data loader \n",
-    "\t\t\ttry:\n",
-    "\t\t\t\tx, y = next(val_loader_iter)\n",
-    "\t\t\texcept StopIteration:\n",
-    "\t\t\t\tval_loader_iter = iter(val_loader)\n",
-    "\t\t\t\tx, y = next(val_loader_iter)\n",
-    "\t\t\tx = x.to(device) \n",
-    "\t\t\t\n",
-    "\t\t\tprint(\"###################################### display and report image ######################################\")\n",
-    "\t\t\twith torch.no_grad():\n",
-    "\t\t\t\tscaled_anchors = ( \n",
-    "\t\t\t\ttorch.tensor(ANCHORS) *\n",
-    "\t\t\t\ttorch.tensor(s).unsqueeze(1).unsqueeze(1).repeat(1,3,2) \n",
-    "\t\t\t\t).to(device) \n",
-    "\t\t\t\toutput = model(x)\n",
-    "\t\t\t\ty0, y1, y2 = ( \n",
-    "\t\t\t\t\ty[0].to(device), \n",
-    "\t\t\t\t\ty[1].to(device), \n",
-    "\t\t\t\t\ty[2].to(device), \n",
-    "\t\t\t\t) \n",
+    "\t\t\t\tif batch_idx % 40 == 0:\n",
+    "\t\t\t\t\t# Saving the model \n",
+    "\t\t\t\t\tif save_model: \n",
+    "\t\t\t\t\t\tsave_checkpoint(model, optimizer, filename=model_path_base +f\"e{e}_b{batch_idx}_vgg16_checkpoint.pth.tar\")\n",
+    "\t\t\t\t\t\t# delete batch checkpoints\n",
+    "\t\t\t\t\t\tfor i in range(0, batch_idx+1, 200):\n",
+    "\t\t\t\t\t\t\tif os.path.exists(model_path_base + f\"b{i}_vgg16_checkpoint.pth.tar\"):\n",
+    "\t\t\t\t\t\t\t\tos.remove(model_path_base + f\"b{i}_vgg16_checkpoint.pth.tar\")\n",
+    "\t\t\t\t\t\t# for i in range(0,e-3):\n",
+    "\t\t\t\t\t\t# \tif os.path.exists(model_path_base + f\"e{i}_vgg16_checkpoint.pth.tar\"):\n",
+    "\t\t\t\t\t\t# \t\tos.remove(model_path_base + f\"e{i}_vgg16_checkpoint.pth.tar\")\n",
+    "\t\t\t\t\n",
+    "\t\t\t\t\tmodel.eval()\n",
+    "\t\t\t\t\n",
+    "\t\t\t\t\t# Getting a sample image from the test data loader \n",
+    "\t\t\t\t\ttry:\n",
+    "\t\t\t\t\t\tx, y = next(val_loader_iter)\n",
+    "\t\t\t\t\texcept StopIteration:\n",
+    "\t\t\t\t\t\tval_loader_iter = iter(val_loader)\n",
+    "\t\t\t\t\t\tx, y = next(val_loader_iter)\n",
+    "\t\t\t\t\tx = x.to(device) \n",
+    "\t\t\t\t\t\n",
+    "\t\t\t\t\tprint(\"###################################### display and report image ######################################\")\n",
+    "\t\t\t\t\twith torch.no_grad():\n",
+    "\t\t\t\t\t\tscaled_anchors = ( \n",
+    "\t\t\t\t\t\ttorch.tensor(ANCHORS) *\n",
+    "\t\t\t\t\t\ttorch.tensor(s).unsqueeze(1).unsqueeze(1).repeat(1,3,2) \n",
+    "\t\t\t\t\t\t).to(device) \n",
+    "\t\t\t\t\t\toutput = model(x)\n",
+    "\t\t\t\t\t\ty0, y1, y2 = ( \n",
+    "\t\t\t\t\t\t\ty[0].to(device), \n",
+    "\t\t\t\t\t\t\ty[1].to(device), \n",
+    "\t\t\t\t\t\t\ty[2].to(device), \n",
+    "\t\t\t\t\t\t) \n",
     "\n",
-    "\t\t\t\twith torch.amp.autocast(device_type=device): \n",
-    "\t\t\t\t\t# Getting the model predictions \n",
-    "\t\t\t\t\toutputs = model(x) \n",
-    "\t\t\t\t\t# Calculating the loss at each scale \n",
-    "\t\t\t\t\tloss = ( \n",
-    "\t\t\t\t\t\tloss_fn(outputs[0], y0, scaled_anchors[0]) \n",
-    "\t\t\t\t\t\t+ loss_fn(outputs[1], y1, scaled_anchors[1]) \n",
-    "\t\t\t\t\t\t+ loss_fn(outputs[2], y2, scaled_anchors[2]) \n",
-    "\t\t\t\t\t) \n",
-    "\t\t\n",
-    "\t\t\t\t# Print predictions\n",
-    "\t\t\t\twriter.add_scalar('Loss/val', loss.item(), e * len(train_loader) + batch_idx)\n",
+    "\t\t\t\t\t\twith torch.amp.autocast(device_type=device): \n",
+    "\t\t\t\t\t\t\t# Getting the model predictions \n",
+    "\t\t\t\t\t\t\toutputs = model(x) \n",
+    "\t\t\t\t\t\t\t# Calculating the loss at each scale \n",
+    "\t\t\t\t\t\t\tloss = ( \n",
+    "\t\t\t\t\t\t\t\tloss_fn(outputs[0], y0, scaled_anchors[0]) \n",
+    "\t\t\t\t\t\t\t\t+ loss_fn(outputs[1], y1, scaled_anchors[1]) \n",
+    "\t\t\t\t\t\t\t\t+ loss_fn(outputs[2], y2, scaled_anchors[2]) \n",
+    "\t\t\t\t\t\t\t) \n",
+    "\t\t\t\t\n",
+    "\t\t\t\t\t\t# Print predictions\n",
+    "\t\t\t\t\t\twriter.add_scalar('Loss/val', loss.item(), e * len(train_loader) + batch_idx)\n",
     "\n",
-    "\t\t\t\t# bboxes = [[] for _ in range(x.shape[0])]\n",
-    "\t\t\t\t# for i in range(3):\n",
-    "\t\t\t\t# \tbatch_size, A, S, _, _ = output[i].shape\n",
-    "\t\t\t\t# \tanchor = scaled_anchors[i]\n",
-    "\t\t\t\t# \tboxes_scale_i = convert_cells_to_bboxes(output[i], anchor, s=S, is_predictions=True)\n",
-    "\t\t\t\t# \tfor idx, box in enumerate(boxes_scale_i):\n",
-    "\t\t\t\t# \t\tbboxes[idx] += box\n",
-    "\t\t\n",
-    "\t\t\t\t# i = 0\n",
-    "\t\t\t\t# print('bboxes[i] shape:', np.array(bboxes[i]).shape)\n",
-    "\t\t\t\t# nms_boxes = nms(bboxes[i], iou_threshold=0.5, threshold=0.6)\n",
-    "\t\t\t\t# img_with_boxes = plot_image(x[i].permute(1, 2, 0).detach().cpu(), nms_boxes, categories)\n",
-    "\t\t\t\t# img_with_boxes = T.ToTensor()(img_with_boxes)\n",
-    "\t\t\t\t# writer.add_image(f'Val/Image_{e}_{i}_{batch_idx}_before', img_with_boxes, e * len(train_loader) + batch_idx)\n",
+    "\t\t\t\t\t\t# bboxes = [[] for _ in range(x.shape[0])]\n",
+    "\t\t\t\t\t\t# for i in range(3):\n",
+    "\t\t\t\t\t\t# \tbatch_size, A, S, _, _ = output[i].shape\n",
+    "\t\t\t\t\t\t# \tanchor = scaled_anchors[i]\n",
+    "\t\t\t\t\t\t# \tboxes_scale_i = convert_cells_to_bboxes(output[i], anchor, s=S, is_predictions=True)\n",
+    "\t\t\t\t\t\t# \tfor idx, box in enumerate(boxes_scale_i):\n",
+    "\t\t\t\t\t\t# \t\tbboxes[idx] += box\n",
+    "\t\t\t\t\n",
+    "\t\t\t\t\t\t# i = 0\n",
+    "\t\t\t\t\t\t# print('bboxes[i] shape:', np.array(bboxes[i]).shape)\n",
+    "\t\t\t\t\t\t# nms_boxes = nms(bboxes[i], iou_threshold=0.5, threshold=0.6)\n",
+    "\t\t\t\t\t\t# img_with_boxes = plot_image(x[i].permute(1, 2, 0).detach().cpu(), nms_boxes, categories)\n",
+    "\t\t\t\t\t\t# img_with_boxes = T.ToTensor()(img_with_boxes)\n",
+    "\t\t\t\t\t\t# writer.add_image(f'Val/Image_{e}_{i}_{batch_idx}_before', img_with_boxes, e * len(train_loader) + batch_idx)\n",
     "\n",
-    "\t\t\tmodel.train()\n",
+    "\t\t\t\t\tmodel.train()\n",
     "\texcept Exception as error:\n",
     "\t\tprint(error)\n",
     "\t\terror_counter += 1\n",
